--- a/zynqmp-secure-boot/README
+++ b/zynqmp-secure-boot/README
@@ -279,7 +279,7 @@ Detail steps as below:
 	$ source ./environment-setup-x86_64-wrlinuxsdk-linux
 	$ source ./oe-init-build-env
 	$ bitbake-layers add-layer <path_to_project>/layers/xilinx-zynqmp/zynqmp-secure-boot
-	$ bitbake wrlinux-image-std
+	$ bitbake wrlinux-image-glibc-std
 
 Note:
 When build xilinx-zynqmp BSP project with secure boot layer, the kernel image type is fitImage that
