--- a/README
+++ b/README
@@ -1,2 +1,139 @@
-This branch is intentionally empty so that it will be ignored when examined
-by a layer indexer.
+        Xilinx ZYNQMP Boards
+
+
+1. About this document
+======================
+This document provides common and non-hardware specific information.
+Please refer to README.hardware for hardware specific information.
+
+Dependencies
+------------
+This layer depends on the oe-core version supplied with Wind River Linux
+and the wrlinux layer.
+
+
+Maintenance
+-----------
+This layer is maintained by Wind River Systems, Inc.
+Contact <support@windriver.com> or your support representative for more
+information on submitting changes.
+
+
+Building the zynqmp layer
+-----------------------------
+This layer and wrlinux layer should be added to bblayers.conf.
+
+
+License
+-------
+Copyright (C) 2019 Wind River Systems, Inc.
+
+Source code included in the tree for individual recipes is under the LICENSE
+stated in the associated recipe (.bb file) unless otherwise stated.
+
+The metadata is under the following license unless otherwise stated.
+
+Permission is hereby granted, free of charge, to any person obtaining a copy
+of this software and associated documentation files (the "Software"), to deal
+in the Software without restriction, including without limitation the rights
+to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
+copies of the Software, and to permit persons to whom the Software is
+furnished to do so, subject to the following conditions:
+
+The above copyright notice and this permission notice shall be included in
+all copies or substantial portions of the Software.
+
+THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
+IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
+FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
+AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
+LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
+OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
+THE SOFTWARE.
+
+2. BSP Kernel and Distros
+=========================
+
+The following table summarizes the valid Wind River Linux distros for this BSP.
+'Y' in each content cell stands for supported; 'N' stands for not supported:
+
+  +--------------+-------------+-------------+------------------+
+  | valid/distro |   wrlinux   | wrlinux-cgl | wrlinux-std-sato |
+  +--------------+-------------+-------------+------------------+
+  |    valid     |      Y      |      N      |         y        |
+  +--------------+-------------+-------------+------------------+
+
+For the supported kernel type for this BSP, check the TARGET_SUPPORTED_KTYPES
+by running 'bitbake -e | grep "^TARGET_SUPPORTED_KTYPES"'.
+
+
+3. Board Specific Patches
+=========================
+
+To get a list of patches applied to the kernel specific to this BSP,
+along with patch descriptions, use git to see what changed on the default
+kernel (git whatchanged <kernel_type>..<bsp_name>). For example:
+
+	# cd path_to_project/tmp-glibc/work-shared/xilinx-zynqmp/kernel-source
+	# git whatchanged standard/base..HEAD
+
+
+4. Boot Instructions
+====================
+
+You must load the DTB (device tree blob) into the target's memory
+prior to booting the kernel Image. The DTB file can be found in the export
+directory after building a project, or you can generate it manually with the
+following commands:
+
+        # bitbake -c devshell virtual/kernel
+        # vim arch/arm64/boot/dts/xilinx/the_file_you_edit*.dts
+	# make xilinx/zynqmp-zcu102-rev1.0.dtb
+
+The resulting DTB file can be found here:
+path_to_project/build/tmp-glibc/work/<bsp name>-wrs-linux/linux-yocto/<kernel version>/linux-<bsp name>-<kernel type>-build/arch/arm64/boot/dts/xilinx/
+
+Assuming all files can be downloaded from a network, deploy your board and host
+properly to ensure your network is available from the board.
+
+4.1 Boot from SD card
+---------------------
+
+4.1.1 Deploy kernel, DTB image and file system image into your SD card
+----------------------------------------------------------------------
+
+Refer to the bootloader/README for information on how to make an SD
+bootable card. Deploy the kernel image, DTB image and file system image as follows:
+
+	# mount /dev/mmcblk0p2 /mnt/sd
+	# tar xfj wrlinux-image-glibc-std-xilinx-zynqmp.tar.bz2 --numeric-owner -C /mnt/sd
+	# umount /mnt/sd
+	# mount /dev/mmcblk0p1 /mnt/sd
+	# cp path_to_Image /mnt/sd/boot
+	# cp path_to_zynqmp-zcu102-rev1.0.dtb /mnt/sd/boot
+	# umount /mnt/sd
+
+4.2.2 Set the u-boot environment variables and boot from SD card
+----------------------------------------------------------------
+
+Run the following command to load the kernel image and DTB image:
+
+	=> setenv bootargs console=ttyPS0,115200 root=/dev/mmcblk0p2 rw rootwait earlycon=cdns,mmio,0xFF000000 clk_ignore_unused
+	=> mmc rescan
+	=> fatload mmc 0 0x10000000 Image
+	=> fatload mmc 0 0x11800000 zynqmp-zcu102-rev1.0.dtb
+	=> booti 0x10000000 - 0x11800000
+
+4.2 NFS boot
+------------
+
+4.2.1 Setup configuration your NFS TFTP server, and deploy the rootfs tarball
+-----------------------------------------------------------------------------
+
+	# sudo tar jxf wrlinux-image-std-sato-xilinx-zynqmp.tar.bz2 -C path_to_rootfs
+
+4.2.2 Set the u-boot environment variables and boot from NFS
+------------------------------------------------------------
+
+	=> setenv bootargs console=ttyPS0,115200 earlycon=cdns,mmio,0xFF000000 clk_ignore_unused root=/dev/nfs rw nfsroot=serverip:path_root_rootfs ip=dhcp
+	=> tftpboot 0x10000000 Image; tftpboot 0x11800000 dtb; booti 0x10000000 - 0x11800000
