--- a/README
+++ b/README
@@ -137,3 +137,52 @@ Run the following command to load the kernel image and DTB image:
 
 	=> setenv bootargs console=ttyPS0,115200 earlycon=cdns,mmio,0xFF000000 clk_ignore_unused root=/dev/nfs rw nfsroot=serverip:path_root_rootfs ip=dhcp
 	=> tftpboot 0x10000000 Image; tftpboot 0x11800000 dtb; booti 0x10000000 - 0x11800000
+
+5. WIC Notes
+============
+
+User can use the OpenEmbedded Image Creator to create the properly partitioned
+image on a SD card. It generates partitioned images from existing OpenEmbedded
+build artifacts. Please refer to the following URL for more detailed partition
+information about WIC:
+
+https://www.yoctoproject.org/docs/2.6/mega-manual/mega-manual.html#creating-partitioned-images-using-wic
+
+After having built your project, a partitioned WIC image will be created in the
+deploy folder as follows:
+
+  path_to_your_project/build/tmp-glibc/deploy/images/xilinx-zynqmp/wrlinux-image-glic-<rootfs_type>-xilinx-zynqmp.wic
+
+There are two partitions in this WIC images, the first one is to hold the boot
+images, the second is the related root file system.
+
+5.1 An example to deploy bootloader into the first partition
+------------------------------------------------------------
+
+1) Deploy the created WIC image into SD card(/dev/sdx) in your host machine.
+
+   $ sudo dd if=wrlinux-image-glibc-<rootfs_type>-xilinx-zynqmp.wic of=/dev/sdx
+
+2) Download binary bootloader from the vendor website, and deploy BOOT.BIN into
+   /dev/sdx1
+
+   $ sudo mount /dev/sdx1 path_to_sdx1
+   $ cp -r path_to_your_bootloader/BOOT.BIN path_to_sdx1
+   $ sync; sudo umount path_to_sdx1
+
+5.2 Boot the board from the WIC SD card
+---------------------------------------
+
+Insert the SD card into the board and power on, then set the proper u-boot
+environment parameters to boot the board, please refer to section 4 for more
+information.
+
+Board can boot automatically by set the below uboot environment variables:
+
+=> setenv bootfile Image; setenv fdtfile zynqmp-zcu102-rev1.0.dtb;  setenv loadaddr 0x10000000; setenv fdtaddr 0x11800000;
+
+=> setenv bootargs 'root=/dev/mmcblk0p2 rw rootdelay=5 console=ttyPS0,115200n8'
+
+=> setenv bootcmd 'fatload mmc 0:1 $loadaddr $bootfile; fatload mmc 0:1 $fdtaddr $fdtfile; booti $loadaddr - $fdtaddr';
+
+=> saveenv; run bootcmd;
