xilinx-zynqmp: improve description about CANFD feature
Issue: LIN1018-5346

- Clarify the board version used to verify CANFD feature.
- indicate the specific dtb file for CANFD feature.

Signed-off-by: Meng Li <Meng.Li@windriver.com>

--- a/README
+++ b/README
@@ -464,9 +464,20 @@ Customer could check the detail system monitor interfaces with below command:
 =========
 
 Based on CANFD FPGA LogiCORE IP from Xilinx, there are 2 canfd devices on FPGA side.
-An example is provided to verify can/canfd driver with FMC extend board(https://www.xilinx.com/products/boards-and-kits/1-12nths4.html)
+An example is provided to verify can/canfd driver with Xilinx-zcu102 board(REV 1.0) and
+FMC extend board(https://www.xilinx.com/products/boards-and-kits/1-12nths4.html)
 
-Detail verification commands as below:
+15.1 Boot up system with CANFD specific dtb file
+------------------------------------------------
+
+	# fatload mmc 0 0x13000000 zynqmp-zcu102-rev1.0-canfd.dtb
+	or
+	# tftpboot 0x13000000 <tftp server>/zynqmp-zcu102-rev1.0-canfd.dtb
+
+15.2 Verify CANFD
+-----------------
+
+	Detail verification commands as below:
 
 	# ip link set can1 up type can bitrate 125000 dbitrate 8000000 fd on
 	# ip link set can2 up type can bitrate 125000 dbitrate 8000000 fd on
