--- a/README
+++ b/README
@@ -70,12 +70,11 @@ by running 'bitbake -e | grep "^TARGET_SUPPORTED_KTYPES"'.
 3. Board Specific Patches
 =========================
 
-To get a list of patches applied to the kernel specific to this BSP,
-along with patch descriptions, use git to see what changed on the default
-kernel (git whatchanged <kernel_type>..<bsp_name>). For example:
+To get a list of patches applied to the kernel specific to this BSP along with
+patch descriptions use git-whatchanged on the default kernel. For example:
 
-	# cd path_to_project/tmp-glibc/work-shared/xilinx-zynqmp/kernel-source
-	# git whatchanged standard/base..HEAD
+	%> cd tmp-glibc/work-shared/<bsp_name>/kernel-source
+	%> git whatchanged <kernel_version>/standard/base..<kernel_version>/standard/<bsp_name>
 
 
 4. Boot Instructions
